tests/negative/MissingArgument.juvix
module MissingArgument;

type T := t : T;

open T using {t} public;

f (a : T) (b : T) : T := t;

x : T :=
  f@{
    b := t
  };
